--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,6 +14,6 @@
 
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/helloworld-image', '.' ]
+ # args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/helloworld2-image', '.' ]
 images:
-- 'gcr.io/$PROJECT_ID/helloworld-image'
+#- 'gcr.io/$PROJECT_ID/helloworld-image'
